samples/_failures_safe/1761492102_b9f908_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_18dc3705.c: In function ‘main’:
./samples/SAFE/__tmp_18dc3705.c:159:9: error: expected expression at end of input
  159 |         case 2: comp_type =
      |         ^~~~
./samples/SAFE/__tmp_18dc3705.c:159:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_18dc3705.c:159:9: error: expected declaration or statement at end of input
